--- a/wishlist.html
+++ b/wishlist.html
@@ -48,22 +48,22 @@
       <tbody>
         <tr id="tableRow1">
           <th scope="row"><img src="assets/plant1.png"></th>
-          <td>Mark</td>
+          <td>Fikus Tree</td>
           <td><button id="removeBtn1">Remove</button></td>
         </tr>
         <tr id="tableRow2">
           <th scope="row"><img src="assets/plant4.png"></th>
-          <td>Jacob</td>
+          <td>Parlour Palm</td>
           <td><button id="removeBtn2">Remove</button></td>
         </tr>
         <tr id="tableRow3">
           <th scope="row"><img src="assets/plant5.png"></th>
-          <td>Larry</td>
+          <td>Japanese Maple</td>
           <td><button id="removeBtn3">Remove</button></td>
         </tr>
         <tr id="tableRow4">
           <th scope="row"><img src="assets/plant3.png"></th>
-          <td>Larry</td>
+          <td>Snake Plant</td>
           <td><button id="removeBtn4">Remove</button></td>
         </tr>
       </tbody>
