--- a/browse.html
+++ b/browse.html
@@ -42,6 +42,7 @@
 
         <!-- Header -->
         <h2>Browse Plants</h2>
+        <button type="button" class="btn btn-success">On Sale</button>
 
         <!-- Plants List Cards -->
         <div class="row pt-5" id="plantsContainer">
